--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/osslib/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
