--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 
 <body>
+    <h1>Title 1</h1>
+    <h2>Title 2</h2>
+    <h3>Title 3</h3>
+    <h4>Title 4</h4>
+    <h5>Title 5</h5>
+    <h6>Title 6</h6>
     <div class="h-100 d-flex">
         <div class="h-100 bg-blue flex-1 hov-flex-2"></div>
         <div class="h-100 bg-green flex-1 hov-flex-2"></div>
