--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <h4>Title 4</h4>
     <h5>Title 5</h5>
     <h6>Title 6</h6>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Some <mark>highlighted</mark> text and <a href="#">link</a>.
+        <code>Some inline code</code>
+    </p>
+    <code>
+        Some code block
+    </code>
     <div class="h-100 d-flex">
         <div class="h-100 bg-blue flex-1 hov-flex-2"></div>
         <div class="h-100 bg-green flex-1 hov-flex-2"></div>
