--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
     <code>
         Some code block
     </code>
+    <ul>
+        <li>Item list 1</li>
+        <li>Item list 2</li>
+        <ul>
+            <li>Item list 3.1</li>
+            <li>Item list 3.2</li>
+            <ul>
+                <li>Item list 3.3.1</li>
+                <li>Item list 3.3.2</li>
+            </ul>
+        </ul>
+    </ul>
     <div class="h-100 d-flex">
-        <div class="h-100 bg-blue flex-1 hov-flex-2"></div>
+        <div class="h-100 bg-blue flex-2 hov-flex-1"></div>
         <div class="h-100 bg-green flex-1 hov-flex-2"></div>
         <div class="h-100 bg-yellow flex-1 hov-flex-2"></div>
         <div class="h-100 bg-orange flex-1 hov-flex-2"></div>
@@ -30,14 +42,18 @@
 
     <script>
         [...document.querySelectorAll('.hov-flex-2')].forEach(el => {
-            el.style.transition = "flex 170ms";
+            el.style.transition = document.querySelector(".hov-flex-1").style.transition = "flex 170ms";
             el.onmouseover = () => {
                 el.classList.remove("flex-1");
                 el.classList.add("flex-2");
+                document.querySelector(".hov-flex-1").classList.remove("flex-2");
+                document.querySelector(".hov-flex-1").classList.add("flex-1");
             };
             el.onmouseout = () => {
                 el.classList.add("flex-1");
                 el.classList.remove("flex-2");
+                document.querySelector(".hov-flex-1").classList.remove("flex-1");
+                document.querySelector(".hov-flex-1").classList.add("flex-2");
             };
         });
     </script>
