--- a/index.html
+++ b/index.html
@@ -30,46 +30,47 @@
             </ul>
         </ul>
     </ul>
-    <div class="h-100 d-flex">
-        <div class="h-100 bg-blue flex-2 hov-flex-1 text-white d-flex justify-content-center align-items-center">
+    <h3>Items range (colors)</h3>
+    <div class="h-100 d-flex items-range">
+        <div class="h-100 bg-blue item text-white d-flex justify-content-center align-items-center">
             #56B5FF
         </div>
-        <div class="h-100 bg-green flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-green item text-white d-flex justify-content-center align-items-center">
             #57F287
         </div>
-        <div class="h-100 bg-yellow flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-yellow item text-white d-flex justify-content-center align-items-center">
             #FEE75C
         </div>
-        <div class="h-100 bg-orange flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-orange item text-white d-flex justify-content-center align-items-center">
             #FFB066
         </div>
-        <div class="h-100 bg-red flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-red item text-white d-flex justify-content-center align-items-center">
             #ED4245
         </div>
-        <div class="h-100 bg-purple flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-purple item text-white d-flex justify-content-center align-items-center">
             #AA66CC
         </div>
-        <div class="h-100 bg-pink flex-1 hov-flex-2 text-white d-flex justify-content-center align-items-center">
+        <div class="h-100 bg-pink item text-white d-flex justify-content-center align-items-center">
             #E679C8
         </div>
     </div>
 
     <script>
-        [...document.querySelectorAll('.hov-flex-2')].forEach(el => {
-            el.style.transition = document.querySelector(".hov-flex-1").style.transition = "flex 170ms";
-            el.onmouseover = () => {
-                el.classList.remove("flex-1");
-                el.classList.add("flex-2");
-                document.querySelector(".hov-flex-1").classList.remove("flex-2");
-                document.querySelector(".hov-flex-1").classList.add("flex-1");
-            };
-            el.onmouseout = () => {
-                el.classList.add("flex-1");
-                el.classList.remove("flex-2");
-                document.querySelector(".hov-flex-1").classList.remove("flex-1");
-                document.querySelector(".hov-flex-1").classList.add("flex-2");
-            };
-        });
+        /*[...document.querySelectorAll('.hov-flex-2')].forEach(el => {
+                                    el.style.transition = document.querySelector(".hov-flex-1").style.transition = "flex 170ms";
+                                    el.onmouseover = () => {
+                                        el.classList.remove("flex-1");
+                                        el.classList.add("flex-2");
+                                        document.querySelector(".hov-flex-1").classList.remove("flex-2");
+                                        document.querySelector(".hov-flex-1").classList.add("flex-1");
+                                    };
+                                    el.onmouseout = () => {
+                                        el.classList.add("flex-1");
+                                        el.classList.remove("flex-2");
+                                        document.querySelector(".hov-flex-1").classList.remove("flex-1");
+                                        document.querySelector(".hov-flex-1").classList.add("flex-2");
+                                    };
+                                });*/
     </script>
 </body>
 
