--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 
 <body>
+    <h1 class="headline-1">Headline 1</h1>
+    <h2 class="headline-2">Headline 2</h2>
+    <h3 class="headline-3">Headline 3</h3>
+    <h4 class="headline-4">Headline 4</h4>
+
     <h1>Title 1</h1>
     <h2>Title 2</h2>
     <h3>Title 3</h3>
@@ -30,8 +35,28 @@
             </ul>
         </ul>
     </ul>
-    <h3>Items range (colors)</h3>
+    <hr class="separator">
+    <h4 class="headline-4">Buttons</h4>
+    <h5>Colors</h5>
+    <a class="btn btn-blue">Blue</a>
+    <a class="btn btn-green">Green</a>
+    <a class="btn btn-yellow">Yellow</a>
+    <a class="btn btn-orange">Orange</a>
+    <a class="btn btn-red">Red</a>
+    <a class="btn btn-purple">Purple</a>
+    <a class="btn btn-pink">Pink</a>
+    <a class="btn btn-light">Light</a>
+    <a class="btn btn-dark">Dark</a>
+    <h5>Sizes</h5>
+    <a class="btn btn-blue btn-sm">Small</a>
+    <a class="btn btn-blue">Normal</a>
+    <a class="btn btn-blue btn-lg">Large</a>
+    <hr class="separator">
+    <h4 class="headline-4">Items range - colors</h4>
     <div class="h-100 d-flex items-range">
+        <div class='h-100 bg-dark-blue item text-white d-flex justify-content-center align-items-center'>
+            #3366FF
+        </div>
         <div class="h-100 bg-blue item text-white d-flex justify-content-center align-items-center">
             #56B5FF
         </div>
