--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="osslib.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script src="osslib.js" charset="utf-8" type="text/javascript"></script>
 </head>
 
@@ -38,6 +39,9 @@
     </ul>
     <hr class="separator">
     <h4 class="headline-4">Buttons</h4>
+    <h5>Types</h5>
+    <a class="btn btn-blue" href="#">Square</a>
+    <a class="btn btn-circle btn-blue" href="#"><i class="bi bi-circle-square"></i></a>
     <h5>Colors</h5>
     <a class="btn btn-blue">Blue</a>
     <a class="btn btn-green">Green</a>
@@ -106,6 +110,8 @@
             #E679C8
         </div>
     </div>
+    <hr>
+    <small>Icons by <a href="https://icons.getbootstrap.com/" target="_blank">Bootstrap Icons</a></small>
 </body>
 
 </html>
