Updated Items range

--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@
     <hr class="separator">
     <h4 class="headline-4">Items range</h4>
     <div class="d-flex items-range" id="test" style="height: 250px;">
-        <div class='h-100 bg-dark-blue item text-white d-flex justify-content-center align-items-center'></div>
-        <div class="h-100 bg-blue item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-green item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-yellow item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-orange item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-red item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-purple item text-white d-flex justify-content-center align-items-center"></div>
-        <div class="h-100 bg-pink item text-white d-flex justify-content-center align-items-center"></div>
+        <div style="background-color: #343d46;" class="h-100 item text-white d-flex justify-content-center align-items-center">Item 1</div>
+        <div style="background-color: #4f5b66;" class="h-100 item text-white d-flex justify-content-center align-items-center">Item 2</div>
+        <div style="background-color: #65737e;" class="h-100 item text-white d-flex justify-content-center align-items-center">Item 3</div>
+        <div style="background-color: #86909c;" class="h-100 item text-white d-flex justify-content-center align-items-center">Item 4</div>
+        <div style="background-color: #a7adba;" class="h-100 item text-black d-flex justify-content-center align-items-center">Item 5</div>
+        <div style="background-color: #c0c5ce;" class="h-100 item text-black d-flex justify-content-center align-items-center">Item 6</div>
     </div>
     <h4 class="headline-4">Colors</h4>
     <div class="d-flex items-range" style="height: 250px;">
