--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
             #30CB00
         </div>
         <div class="h-100 bg-yellow item text-white d-flex justify-content-center align-items-center">
-            #FEE75C
+            #FFDB00
         </div>
         <div class="h-100 bg-orange item text-white d-flex justify-content-center align-items-center">
-            #FFB066
+            #F97300
         </div>
         <div class="h-100 bg-red item text-white d-flex justify-content-center align-items-center">
-            #ED4245
+            #EF2200
         </div>
         <div class="h-100 bg-purple item text-white d-flex justify-content-center align-items-center">
-            #AA66CC
+            #9C0FBF
         </div>
         <div class="h-100 bg-pink item text-white d-flex justify-content-center align-items-center">
-            #E679C8
+            #EA1AB7
         </div>
     </div>
     <hr>
